Wrong API keyword update and partial problem repair

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 			<button type="button" id="mpOpenFullScreen">mp.openFullScreen</button>
 
 			<!-- 销毁视频播放器 -->
-			<button type="button" id="mpDestory">mp.destory</button>
+			<button type="button" id="mpDestroy">mp.destroy</button>
 
 			<!-- 获取所有视频内控件 -->
 			<button type="button" id="mpGetControlsRemove">mp.getControls.remove</button>
