Update plugins functon

--- a/demo/multiplePlayer.html
+++ b/demo/multiplePlayer.html
@@ -23,7 +23,7 @@
         var config_2 = Object.assign({ autoplay:true },window.playerConfig);
         config_2.container = '#mui-player-2';
         config_2.themeColor = '#55c612';
-        config_2.src = 'https://muiplayer.oss-cn-shanghai.aliyuncs.com/static/media/subtitleSource.mp4';
+        config_2.src = 'https://muiplayer.js.org/media/subtitleSource.mp4';
         config_2.poster = 'https://muiplayer.oss-cn-shanghai.aliyuncs.com/static/image/subtitle_poster.jpg';
         new MuiPlayer(config_2);
     </script>
