--- a/demo/hlsExample.html
+++ b/demo/hlsExample.html
@@ -17,7 +17,7 @@
     
     <script>
         var config = window.playerConfig;
-        config.src = 'https://muiplayer.oss-cn-shanghai.aliyuncs.com/static/media/media.m3u8';
+        config.src = 'https://muiplayer.js.org/media/media.m3u8';
         config.parse = {
             type:'hls',
             loader:Hls,
