--- a/demo/subtitleExample.html
+++ b/demo/subtitleExample.html
@@ -17,7 +17,7 @@
     
     <script>
         var config = window.playerConfig;
-        config.src = 'https://muiplayer.oss-cn-shanghai.aliyuncs.com/static/media/subtitleSource.mp4';
+        config.src = 'https://muiplayer.js.org/media/subtitleSource.mp4';
         config.poster = 'https://muiplayer.oss-cn-shanghai.aliyuncs.com/static/image/subtitle_poster.jpg';
         config.subtitle = {
             tracks:[
@@ -45,7 +45,6 @@
 
         config.plugins = [
             typeof MuiPlayerDesktopPlugin == 'function' ? new MuiPlayerDesktopPlugin({
-
             }) : {},
         ]
         
